# argupdate

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
argupdate/: __init__.py  argupdate.py
