[tool.poetry]
name = "argupdate"
version = "0.1.0"
description = "Dynamically update a functions arguments before passing them in."
authors = ["Dustin Wyatt <dustin.wyatt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
