[tool.poetry]
name = "argupdate"
version = "0.1.0"
description = "Dynamically update a functions arguments before passing them in."
authors = ["Dustin Wyatt <dustin.wyatt@gmail.com>"]
license = "MIT"
classifiers=[
        "Programming Language :: Python :: 3.8",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

